Add config commands

--- a/pypi-package/src/.bloggen/config.json
+++ b/pypi-package/src/.bloggen/config.json
@@ -1,1 +1,29 @@
-[{"name": "default", "active": true, "data": {"backend": "gcp", "credentials": "path_to_credentials"}}, {"name": "Lee", "active": false, "data": {"backend": "gcp", "credentials": "path_to_credentials"}}, {"name": "Kevin", "active": false, "data": {"backend": "gcp", "credentials": "path_to_credentials"}}]
+[
+  {
+    "name": "default",
+    "active": false,
+    "data": {
+      "backend": "gcp",
+      "credentials": "path_to_credentials",
+      "buckets": []
+    }
+  },
+  {
+    "name": "Lee",
+    "active": false,
+    "data": {
+      "backend": "gcp",
+      "credentials": "path_to_credentials",
+      "buckets": []
+    }
+  },
+  {
+    "name": "Kevin",
+    "active": true,
+    "data": {
+      "backend": "gcp",
+      "credentials": "path_to_credentials",
+      "buckets": []
+    }
+  }
+]
