--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-pypi-package/static-site
-pypi-package/src/notes
-pypi-package/dist
-pypi-package/src/__pycache__
-
+bloggen/src/notes
+bloggen/dist
+bloggen/src/__pycache__
