--- a/bloggen/bloggen/.bloggen/.env
+++ b/bloggen/bloggen/.bloggen/.env
@@ -6,4 +6,4 @@
 
 # Write the path into the variable below.
 
-GOOGLE_APPLICATION_CREDENTIALS=/Users/lee/bloggen/bloggen/bloggenlee-a648e2f0d0d3.json
+GOOGLE_APPLICATION_CREDENTIALS=
