--- a/bloggen/pyproject.toml
+++ b/bloggen/pyproject.toml
@@ -14,6 +14,7 @@ Markdown = "^3.4.1"
 google-cloud-storage = "^2.5.0"
 pathlib = "^1.0.1"
 beautifulsoup4 = "^4.11.1"
+google-cloud = "^0.34.0"
 
 [tool.poetry.scripts]
 bloggen = "bloggen.__main__:main"
