--- a/bloggen/pyproject.toml
+++ b/bloggen/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "bloggen"
-version = "0.2.1"
-description = "Deploy md as a static site"
+version = "0.0.1"
+description = "Deploy a dir of md files as a static site"
 authors = ["Lee Harrold <halzinnia@gmail.com>"]
 license =  "ISC" 
 readme = "README.md"
