WIP Support blog subdirectories

--- a/bloggen/bloggen/.bloggen/config.json
+++ b/bloggen/bloggen/.bloggen/config.json
@@ -1,12 +1,1 @@
-[
-  {
-    "name": "default",
-    "active": true,
-    "data": {
-      "backend": "gcp",
-      "credentials": "path_to_credentials",
-      "project": "",
-      "buckets": ["default_bloggen_bucket"]
-    }
-  }
-]
+[{"name": "default", "active": true, "data": {"backend": "gcp", "credentials": "/Users/lee/keys/gcp_adc/harrold_connect.json", "project": "", "buckets": ["default_bloggen_bucket"]}}]
